# circdeploy

./: .editorconfig  .gitignore  LICENSE  Pipfile  README.md  cspell.json  project-words.txt  pyproject.toml  tox.ini
.github/workflows/: build.yml  codeql.yml
src/circdeploy/: __init__.py  main.py
tests/: test_command.py  test_version.py
