[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "circdeploy"
authors = [{ name = "Donald Patrick Seal", email = "code@plasticrake.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["circuitpython"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python",
  "Topic :: Education",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Software Distribution",

]
requires-python = ">=3.7"
dependencies = ["circup", "igittigitt", "rich", "typer"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/plasticrake/circdeploy"

[project.scripts]
circdeploy = "circdeploy.main:main"

[tool.isort]
profile = "black"
