[tool.poetry]
name = "circdeploy"
version = "0.2.1"
description = "Easily deploy your CircuitPython projects"
license = "MIT"
authors = ["Patrick Seal <code@plasticrake.com>"]
readme = "README.md"
homepage = "https://github.com/plasticrake/circdeploy"
keywords = ["circuitpython"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Topic :: Education",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Software Distribution",
]

[tool.poetry.dependencies]
python = "^3.8"
circup = "^1.1.2"
igittigitt = "^2.1.2"
rich = "^12.5.1"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tox = "^3.25.1"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
tox-gh-actions = "^2.9.1"

[tool.poetry.scripts]
circdeploy = "circdeploy:main"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
